/*
	Copyright The containerd Authors.

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
*/

syntax = "proto3";

package containerd.services.verifier.v1;

option go_package = "github.com/containerd/containerd/api/services/verifier/v1;verifier";

service Verifier {
	rpc VerifyImage(VerifyImageRequest) returns (VerifyImageResponse);
}

message VerifyImageRequest {
	string image_name = 1;
	string image_digest = 2;
}

message VerifyImageResponse {
	bool ok = 1;
	string reason = 2;
}
